# jerk_bartender_chatbot

./: main.py  pyproject.toml
conversation/: bartender.py  client_openai.py  conversation_base.py  speak.py  streaming_vaad.py
ui/: main_window.py  states.py  tts_worker.py  worker.py
vision/: camera.py  camera_thread.py  camera_utils.py
