[project]
name = "jerk-bartender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "opencv-python>=4.11.0.86",
    "pyqt6>=6.10.1",
    "python-multipart>=0.0.21",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
